--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M5</version>
+                    <configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>${xmlSuiteFileName}</suiteXmlFile>
+						
+					</suiteXmlFiles>
+				</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
